@@ -185,7 +185,3 @@ unknown_style {
         fore: #FFFFFF bold; 
         back: #DD0101 eol; 
 }
-
-whitespace_style {
-        fore: #838383;
-}
